# LearnOpenGL

./: .gitignore  CMakeLists.txt  README.md
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
src/: main.cpp
